<resources>
    <string name="app_name">Diário de treino</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Lista de Exercícios</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="nome_exerccio">Nome Exercício</string>
    <string name="observaco">Observação</string>
    <string name="carga_em_kg">Carga em Kg</string>
    <string name="repeticoes">Repetições</string>
    <string name="series">Séries</string>
    <string name="salvar">Salvar</string>
    <string name="calcular_carga">Calcular Carga</string>
    <string name="carga_total">Carga Total:</string>
    <string name="calcular_volume_do_exercicio">Calcular Volume do Exercício</string>
    <string name="volume_do_exercicio">Volume do Exercício</string>
</resources>